# game-of-shalk

./: CMakeLists.txt
src/: main.cpp  player.cpp  player.h
src/pch/: pch.h
